--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="card-search.html">Deck</a></li>
-                <li><a href="lore.html">Lore</a></li>
+                <li><a href="card-search.html">Card Search</a></li>
+                <li><a href="lore.html">Multiverse Lore</a></li>
+                <li><a href="planeswalkers.html">Search Planeswalkers</a></li>
             </ul>
         </nav>
     </header>
+    
     <main>
-        <main>
-
-            <section id="intro">
-                <h2>Welcome to the Magic: The Gathering Webpage</h2>
-                <p>Explore deck-building strategies, card lore, and more!</p>
-            </section>
-
-        </main>
+        <section id="intro">
+            <h2>Welcome to the Magic: The Gathering Webpage</h2>
+            <p>
+                Dive into the heart of Magic: The Gathering with tools and resources designed to enhance your gameplay and lore knowledge. Whether you're searching for the perfect card, unraveling the stories of the multiverse, or exploring the powerful planeswalkers that shape Magic's epic tales, you've come to the right place.
+            </p>
+            <p>
+                Use our <a href="card-search.html">Card Search</a> to find the ideal additions to your decks, delve into <a href="lore.html">Multiverse Lore</a> to discover the rich history of Magic's planes, and uncover the secrets of Magic's most iconic characters in our <a href="planeswalkers.html">Planeswalker Search</a>.
+            </p>
+        </section>
     </main>
+    
     <footer>
         <p>&copy; 2024 Magic Webpage</p>
     </footer>
