--- a/lore.html
+++ b/lore.html
@@ -8,23 +8,51 @@
 </head>
 <body>
     <header>
-        <h1>Magic: The Gathering</h1>
+        <h1>Magic: The Gathering Lore</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="card-search.html">Deck</a></li>
                 <li><a href="lore.html">Lore</a></li>
+                <li><a href="planeswalkers.html">Planeswalkers</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
-        <section id="lore">
-            <h2>Magic: The Gathering Lore</h2>
-            <p>Explore the rich lore behind the Magic universe, including stories, characters, and events.</p>
+        <!-- Introduction Section -->
+        <section>
+            <h2>The Multiverse</h2>
+            <p>The Multiverse is an infinite expanse of planes, each a unique and vibrant world with its own cultures, magic, and challenges. At the center of Magic: The Gathering is the ability of planeswalkers to traverse these worlds, creating endless possibilities for conflict, alliances, and discovery.</p>
+        </section>
+
+        <!-- Featured Plane: Mirrodin -->
+        <section>
+            <h2>Mirrodin: A World of Metal</h2>
+            <p>Mirrodin, originally known as Argentum, is a plane where every aspect of the environment is made of metal. Created by the planeswalker Karn, this artificial world is a place of beauty and danger. Its five suns cast their light over landscapes of razor-sharp grass, metallic mountains, and rivers of quicksilver.</p>
+            <p>Mirrodin’s inhabitants include both native lifeforms and species transplanted from other planes. Among them are the resilient Vulshok, the crafty Vedalken, the ferocious Leonin, and the mysterious Neurok. Each group has adapted to the metallic environment, creating a rich and diverse culture.</p>
+            <p>Mirrodin's story takes a dark turn with the emergence of the Phyrexians. Their invasion corrupts the plane, transforming it into New Phyrexia. The once beautiful world becomes a nightmarish landscape of biomechanical horrors, and the struggle for survival continues under the shadow of Phyrexian domination.</p>
+        </section>
+
+        <!-- Zendikar -->
+        <section>
+            <h2>Zendikar: A World of Adventure</h2>
+            <p>Zendikar is a wild and untamed plane, known for its floating hedrons and powerful mana. Adventurers flock to Zendikar in search of ancient relics and treasures hidden in its perilous landscapes. However, Zendikar is not without its threats. The rise of the Eldrazi, cosmic beings of destruction, has reshaped the plane and left its inhabitants fighting for their lives.</p>
+        </section>
+
+        <!-- Ravnica -->
+        <section>
+            <h2>Ravnica: The City of Guilds</h2>
+            <p>Ravnica is a vast city that spans the entire plane. It is governed by ten guilds, each representing a unique philosophy and magical style. From the law-enforcing Azorius Senate to the chaotic Rakdos Cult, these guilds shape the politics and culture of Ravnica. The guilds are in constant conflict, creating an intricate web of alliances and rivalries.</p>
+        </section>
+
+        <!-- Dominaria -->
+        <section>
+            <h2>Dominaria: The Heart of the Multiverse</h2>
+            <p>Dominaria is the plane where Magic: The Gathering began. It is rich in history and has been the stage for countless epic battles and events. From the Brothers' War to the Weatherlight Saga, Dominaria is a plane of heroism, tragedy, and legacy.</p>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Magic Webpage</p>
     </footer>
