--- a/card-search.html
+++ b/card-search.html
@@ -3,29 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic: The Gathering Deck Search</title>
+    <title>Deck Search</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Magic: The Gathering</h1>
+        <h1>Magic: The Gathering Deck Search</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="card-search.html">Deck</a></li>
+                <li><a href="card-search.html">Card Search</a></li>
                 <li><a href="lore.html">Lore</a></li>
+                <li><a href="planeswalkers.html">Planeswalkers</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <section id="card-search">
-            <h2>Deck Search</h2>
-            <p>This feature will allow users to search for Magic: The Gathering decks and cards based on various filters.</p>
+            <h2>Search for Cards</h2>
+            <form id="search-form">
+                <label for="color">Color:</label>
+                <select id="color">
+                    <option value="">Any</option>
+                    <option value="white">White</option>
+                    <option value="blue">Blue</option>
+                    <option value="black">Black</option>
+                    <option value="red">Red</option>
+                    <option value="green">Green</option>
+                </select>
+
+                <label for="mana-cost">Mana Cost:</label>
+                <input type="number" id="mana-cost" placeholder="Enter mana cost">
+
+                <label for="type">Type:</label>
+                <input type="text" id="type" placeholder="Enter card type">
+
+                <button type="submit">Search</button>
+            </form>
+            <div id="search-results">
+                <!-- Search results will appear here -->
+            </div>
         </section>
     </main>
-    
+
     <footer>
         <p>&copy; 2024 Magic Webpage</p>
     </footer>
 </body>
+</html>
