--- a/lore.html
+++ b/lore.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="card-search.html">Deck</a></li>
-                <li><a href="lore.html">Lore</a></li>
-                <li><a href="planeswalkers.html">Planeswalkers</a></li>
+                <li><a href="card-search.html">Card Search</a></li>
+                <li><a href="lore.html">Multiverse Lore</a></li>
+                <li><a href="planeswalkers.html">Search Planeswalkers</a></li>
             </ul>
         </nav>
     </header>
