--- a/card-search.html
+++ b/card-search.html
@@ -3,53 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deck Search</title>
+    <title>Card Search</title>
     <link rel="stylesheet" href="style.css">
-    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Magic: The Gathering Deck Search</h1>
+        <h1>Magic: The Gathering - Card Search</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="card-search.html">Card Search</a></li>
-                <li><a href="lore.html">Lore</a></li>
+                <li><a href="card-search.html" class="active">Card Search</a></li>
                 <li><a href="planeswalkers.html">Planeswalkers</a></li>
+                <li><a href="lore.html">Multiverse Lore</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="card-search">
-            <h2>Search for Cards</h2>
+        <section>
+            <h2>Search for a Card</h2>
             <form id="search-form">
+                <label for="name">Card Name:</label>
+                <input type="text" id="name" placeholder="Enter card name">
+
                 <label for="color">Color:</label>
-                <select id="color">
-                    <option value="">Any</option>
-                    <option value="white">White</option>
-                    <option value="blue">Blue</option>
-                    <option value="black">Black</option>
-                    <option value="red">Red</option>
-                    <option value="green">Green</option>
-                </select>
+                <input type="text" id="color" placeholder="Enter color (e.g., white, blue)">
 
                 <label for="mana-cost">Mana Cost:</label>
                 <input type="number" id="mana-cost" placeholder="Enter mana cost">
 
                 <label for="type">Type:</label>
-                <input type="text" id="type" placeholder="Enter card type">
+                <input type="text" id="type" placeholder="Enter type (e.g., Creature, Instant)">
 
                 <button type="submit">Search</button>
+                <button type="button" id="random-card">Surprise Me</button>
             </form>
-            <div id="search-results">
-                <!-- Search results will appear here -->
-            </div>
+        </section>
+
+        <section id="search-results">
+            <!-- Results will be dynamically inserted here -->
+        </section>
+
+        <section id="pagination">
+            <!-- Pagination buttons will be dynamically generated here -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Magic Webpage</p>
+        <p>&copy; 2024 Magic: The Gathering Fan Page</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
