--- a/planeswalkers.html
+++ b/planeswalkers.html
@@ -3,38 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic: The Gathering Planeswalkers</title>
+    <title>Planeswalker Search</title>
     <link rel="stylesheet" href="style.css">
-    <script src="planeswalkers.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Magic: The Gathering Planeswalkers</h1>
+        <h1>Magic: The Gathering - Planeswalker Search</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="card-search.html">Card Search</a></li>
-                <li><a href="lore.html">Lore</a></li>
-                <li><a href="planeswalkers.html">Planeswalkers</a></li>
+                <li><a href="planeswalkers.html" class="active">Planeswalkers</a></li>
+                <li><a href="lore.html">Multiverse Lore</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="search">
-            <h2>Search for Planeswalkers</h2>
-            <form id="search-form">
-                <input type="text" id="planeswalker-search" placeholder="Enter planeswalker name">
+        <section>
+            <h2>Search for a Planeswalker</h2>
+            <form id="planeswalker-search-form">
+                <label for="planeswalker-name">Planeswalker Name:</label>
+                <input type="text" id="planeswalker-name" placeholder="Enter planeswalker name">
+
+                <label for="planeswalker-color">Color:</label>
+                <input type="text" id="planeswalker-color" placeholder="Enter color (e.g., Blue, Red)">
+
                 <button type="submit">Search</button>
+                <button type="button" id="random-planeswalker">Surprise Me</button>
             </form>
-            <div id="planeswalker-results">
-                <!-- Search results will appear here -->
-            </div>
+        </section>
+
+        <section id="planeswalker-results">
+            <!-- Results will be dynamically inserted here -->
         </section>
     </main>
+    <section id="pagination">
+        <!-- Pagination buttons will be dynamically generated here -->
+    </section>
 
     <footer>
-        <p>&copy; 2024 Magic Webpage</p>
+        <p>&copy; 2024 Magic: The Gathering Fan Page</p>
     </footer>
+
+    <script src="planeswalkers.js"></script>
 </body>
 </html>
