--- a/lore.html
+++ b/lore.html
@@ -3,58 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic: The Gathering Lore</title>
+    <title>Multiverse Lore</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Magic: The Gathering Lore</h1>
+        <h1>Magic: The Gathering - Multiverse Lore</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="card-search.html">Card Search</a></li>
-                <li><a href="lore.html">Multiverse Lore</a></li>
-                <li><a href="planeswalkers.html">Search Planeswalkers</a></li>
+                <li><a href="planeswalkers.html">Planeswalkers</a></li>
+                <li><a href="lore.html" class="active">Multiverse Lore</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Introduction Section -->
         <section>
-            <h2>The Multiverse</h2>
-            <p>The Multiverse is an infinite expanse of planes, each a unique and vibrant world with its own cultures, magic, and challenges. At the center of Magic: The Gathering is the ability of planeswalkers to traverse these worlds, creating endless possibilities for conflict, alliances, and discovery.</p>
+            <h2>The Story of Mirrodin</h2>
+            <p>
+                Mirrodin is a plane of gleaming metal where nature itself is fused with artifice. 
+                Once ruled by Karn, the silver golem, it became corrupted by the malevolent Phyrexians.
+            </p>
+            <!-- Image with a caption -->
+            <figure>
+                <img src="mirrodin.jpg" alt="Mirrodin's metallic landscape" />
+                <figcaption>The metallic plane of Mirrodin</figcaption>
+            </figure>
         </section>
 
-        <!-- Featured Plane: Mirrodin -->
         <section>
-            <h2>Mirrodin: A World of Metal</h2>
-            <p>Mirrodin, originally known as Argentum, is a plane where every aspect of the environment is made of metal. Created by the planeswalker Karn, this artificial world is a place of beauty and danger. Its five suns cast their light over landscapes of razor-sharp grass, metallic mountains, and rivers of quicksilver.</p>
-            <p>Mirrodin’s inhabitants include both native lifeforms and species transplanted from other planes. Among them are the resilient Vulshok, the crafty Vedalken, the ferocious Leonin, and the mysterious Neurok. Each group has adapted to the metallic environment, creating a rich and diverse culture.</p>
-            <p>Mirrodin's story takes a dark turn with the emergence of the Phyrexians. Their invasion corrupts the plane, transforming it into New Phyrexia. The once beautiful world becomes a nightmarish landscape of biomechanical horrors, and the struggle for survival continues under the shadow of Phyrexian domination.</p>
+            <h2>Mirrodin Besieged/All Will Be One Trailer</h2>
+            <!-- Embedded video -->
+            <video controls width="600">
+                <source src="mirrodin-besieged.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <p>Watch the official Mirrodin Besieged/All Will Be One cinematic trailer.</p>
         </section>
 
-        <!-- Zendikar -->
         <section>
-            <h2>Zendikar: A World of Adventure</h2>
-            <p>Zendikar is a wild and untamed plane, known for its floating hedrons and powerful mana. Adventurers flock to Zendikar in search of ancient relics and treasures hidden in its perilous landscapes. However, Zendikar is not without its threats. The rise of the Eldrazi, cosmic beings of destruction, has reshaped the plane and left its inhabitants fighting for their lives.</p>
+            <h2>Phyrexian Invasion Theme</h2>
+            <!-- Audio player -->
+            <audio controls>
+                <source src="phyrexian-theme.mp3" type="audio/mp3">
+                Your browser does not support the audio element.
+            </audio>
+            <p>Immerse yourself in the haunting sounds of the Phyrexian invasion.</p>
         </section>
 
-        <!-- Ravnica -->
         <section>
-            <h2>Ravnica: The City of Guilds</h2>
-            <p>Ravnica is a vast city that spans the entire plane. It is governed by ten guilds, each representing a unique philosophy and magical style. From the law-enforcing Azorius Senate to the chaotic Rakdos Cult, these guilds shape the politics and culture of Ravnica. The guilds are in constant conflict, creating an intricate web of alliances and rivalries.</p>
-        </section>
-
-        <!-- Dominaria -->
-        <section>
-            <h2>Dominaria: The Heart of the Multiverse</h2>
-            <p>Dominaria is the plane where Magic: The Gathering began. It is rich in history and has been the stage for countless epic battles and events. From the Brothers' War to the Weatherlight Saga, Dominaria is a plane of heroism, tragedy, and legacy.</p>
+            <h2>Interactive Timeline</h2>
+            <!-- Interactive content -->
+            <p>Explore the timeline of Mirrodin's transformation:</p>
+            <ul>
+                <li>Original creation by Karn</li>
+                <li>Infection by the Phyrexian oil</li>
+                <li>Rise of the Praetors</li>
+                <li>The war between Mirrans and Phyrexians</li>
+            </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Magic Webpage</p>
+        <p>&copy; 2024 Magic: The Gathering Fan Page</p>
     </footer>
+
+
 </body>
 </html>
